--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -10,9 +10,10 @@
   <div class="translator-container">
     <label for="input">Enter a sentence:</label>
     <input type="text" id="input">
-    <button onclick="pigLatinTranslator(document.getElementById('input').value)">Translate</button>
+    <button onclick="translate()">Translate</button>
     <p id="translation"></p>
   </div>
 </body>
 </html>
+
 
